--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -28,7 +28,7 @@
         <div class="text-block cta-para-one col-xs-12">{{{content.ctaParagraphOne.html}}}</div>
         <div class="text-block cta-para-two col-xs-12">{{{content.ctaParagraphTwo.html}}}</div>
         </div>
-        <ul class="cta-points">
+        <ul class="cta-points row">
           <li class="col-xs-12"><strong><div class="point-content col-xs-12">{{{content.pointOneText.html}}}</div></strong></li>
           <li class="col-xs-12"><strong><div class="point-content col-xs-12">{{{content.pointTwoText.html}}}</div></strong></li>
           <li class="col-xs-12"><strong><div class="point-content col-xs-12">{{{content.pointThreeText.html}}}</div></strong></li>
