--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -1,117 +1,312 @@
-<div class="row screen rules-screen initial col-lg-12 col-sm-12">
-	<div class="main-rule">@stake is a deliberative democracy role playing game </div>
-	<div class="secondary-rule">...and is driven by a real issues such as education, civic engagement, environmentalism, etc.</div>
-  <div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-  <div class="form">
-    <button class="skip submit {{showHide this}}" data-event="game:skip_rules">skip rules</button>
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen initial">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="@stake is a deliberative democracy role playing game driven by real issues such as education, civic engagement, environmentalism, etc."
+	}}
+
+	{{> component/speech 
+			body="@stake is a deliberative democracy role playing game driven by real issues such as education, civic engagement, environmentalism, etc."
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">Each round reveals a specific question related to the game category</div>
-	<div class="secondary-rule">and asks players to pitch a potential solution or proposal for addressing </div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="Each round reveals a specific question related to the game category. And asks players to pitch a potential solution or proposal for addressing."
+	}}
+
+	{{> component/speech 
+			body="Each round reveals a specific question related to the game category. And asks players to pitch a potential solution or proposal for addressing."
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">Players put themselves in the shoes of stakeholders impacted by these issues. </div>
-	<div class="secondary-rule">and take turns pitching proposed solutions based on their stakeholder role</div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="Players put themselves in the shoes of stakeholders impacted by these issues. And take turns pitching proposed solutions based on their stakeholder role."
+	}}
+
+	{{> component/speech 
+			body="Players put themselves in the shoes of stakeholders impacted by these issues. And take turns pitching proposed solutions based on their stakeholder role."
+
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">As a stakeholder, your goal is to pitch the best proposal </div>
-	<div class="secondary-rule">and integrate hidden agenda items that are specific to your stakeholder role</div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="As a stakeholder, your goal is to pitch the best proposal. And integrate hidden agenda items that are specific to your stakeholder role."
+	}}
+
+	{{> component/speech 
+			body="As a stakeholder, your goal is to pitch the best proposal. And integrate hidden agenda items that are specific to your stakeholder role."
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">Each round a proposal is selected by a player whose role is the decider.</div>
-	<div class="secondary-rule">The decider moderates discussion and selects the best proposal as the winner of the round</div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="Each round a proposal is selected by a player whose role is the decider. The decider moderates discussion and selects the best proposal as the winner of the round."
+	}}
+
+	{{> component/speech 
+			body="Each round a proposal is selected by a player whose role is the decider. The decider moderates discussion and selects the best proposal as the winner of the round."
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">Once a winner is selected, each player's  agenda items are revealed</div>
-	<div class="secondary-rule">and one by one the decider determines if the selected proposal includes item.</div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="Once a winner is selected, each player's  agenda items are revealed. And one by one the decider determines if the selected proposal includes item."
+	}}
+
+	{{> component/speech 
+			body="Once a winner is selected, each player's  agenda items are revealed. And one by one the decider determines if the selected proposal includes item."
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">Win bonus coins by having agenda items within the selected proposal</div>
-	<div class="secondary-rule">even if the winning proposal is not your own!</div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="Win bonus coins by having agenda items within the selected proposal. Even if the winning proposal is not your own!"
+	}}
+
+	{{> component/speech 
+			body="Win bonus coins by having agenda items within the selected proposal. Even if the winning proposal is not your own!"
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">The goal of the game is to pitch the best proposal</div>
-	<div class="secondary-rule">...as well as incorporating your hidden agenda items!</div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="The goal of the game is to pitch the best proposal...as well as incorporating your hidden agenda items!"
+	}}
+
+	{{> component/speech 
+			body="The goal of the game is to pitch the best proposal...as well as incorporating your hidden agenda items!"
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">There are 3 rounds in each game of @stake</div>
-	<div class="secondary-rule"></div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="There are 3 rounds in each game of @stake."
+	}}
+
+	{{> component/speech 
+			body="There are 3 rounds in each game of @stake."
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">At the start of the game, the first decider begins with 300 coins.</div>
-	<div class="secondary-rule">And each stakeholder begins with 200 coins</div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="At the start of the game, the first decider begins with 300 coins. And each stakeholder begins with 200 coins."
+	}}
+
+	{{> component/speech 
+			body="At the start of the game, the first decider begins with 300 coins. And each stakeholder begins with 200 coins."
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">Every round starts with the 300 coins in the pot</div>
-	<div class="secondary-rule">More coins are added to the pot at different times throughout the round. </div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="Every round starts with the 300 coins in the pot. More coins are added to the pot at different times throughout the round."
+	}}
+
+	{{> component/speech 
+			body="Every round starts with the 300 coins in the pot. More coins are added to the pot at different times throughout the round."
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">Stakeholders win all the coins in the pot if the decider selects their proposal</div>
-	<div class="secondary-rule">And any stakeholder whose agenda items are in the winning proposal recieve bonus coins</div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="Stakeholders win all the coins in the pot if the decider selects their proposal. And any stakeholder whose agenda items are in the winning proposal recieve bonus coins."
+	}}
+
+	{{> component/speech 
+			body="Stakeholders win all the coins in the pot if the decider selects their proposal. And any stakeholder whose agenda items are in the winning proposal recieve bonus coins."
+	}}
+
 </div>
 
-<div class="row screen rules-screen col-lg-12 col-sm-12">
-	<div class="main-rule">The player with the most coins at the end of 3 rounds is the winner!</div>
-	<div class="secondary-rule"></div>	  
-	<div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
-	<div class="form">
-		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
-	</div>
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="read the text in the blue box outloud"
+			body="Something here"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="The player with the most coins at the end of 3 rounds is the winner!"
+	}}
+
+	{{> component/speech 
+			body="The player with the most coins at the end of 3 rounds is the winner!"
+	}}
+
 </div>
