--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -59,6 +59,17 @@
 		#start {
 			width: 100%
 		}
+		#tutorial {
+	    padding-top: 65%;
+		}
+
+		.btn_cap {
+			width: 90%;
+			margin: 15% auto;
+			margin-top: 0px;
+			font-size: 12px;
+			color: lighten($background-color, 20%);
+		}
 
 		// Show back button on login screen
 		.back-button {
@@ -143,58 +154,61 @@
 			  letter-spacing: 0px;
 			  text-align: center;
 			}
-
-
 		}
 
 		&#choices {
-			.btn {
-				width: 80%;
-				white-space: normal;
-				color: white;
-				border: 0px;
-				border-radius:0px;
-				height:48px;
-				padding:0px;
-				margin: 0 auto;
-				margin-bottom: 70px;
 
-				h2 {
-					font-size: 20px;
-					line-height: 48px;
-					margin:0px;
-					margin-bottom: 10px;
-					font-family: AvenirNext-Bold;
-				  font-weight: bold;
-				  font-style: normal;
-				  font-stretch: normal;
-				  letter-spacing: 0px;
-				  text-align: center;
-				}
-
-				&#btn_new_game {
-					background: -moz-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* FF3.6-15 */
-					background: -webkit-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* Chrome10-25,Safari5.1-6 */
-					background: linear-gradient(to bottom, $orange-light 90%, $orange-dark 10%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-					
-				}
-
-				&#btn_join_game {
-					background: -moz-linear-gradient(top, $blue-light 90%, $blue-dark 10%); /* FF3.6-15 */
-					background: -webkit-linear-gradient(top, $blue-light 90%, $blue-dark 10%); /* Chrome10-25,Safari5.1-6 */
-					background: linear-gradient(to bottom, $blue-light 90%, $blue-dark 10%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-					
-				}
+			#btn_new_game {
+				@include gradient-vertical($orange-light, $orange-dark, 90%, 10%);					
 			}
-			.btn_cap {
-				width: 90%;
-				margin: 15% auto;
-				margin-top: 0px;
-				font-size: 12px;
-				color: lighten($background-color, 20%);
+
+			#btn_join_game {
+				@include gradient-vertical($blue-light, $blue-dark, 90%, 10%);	
+				
+			}
+		
+		}
+
+		.btn {
+			width: 80%;
+			white-space: normal;
+			color: white;
+			border: 0px;
+			border-radius:0px;
+			height:48px;
+			padding:0px;
+			margin: 0 auto;
+			margin-bottom: 70px;
+
+			h2 {
+				font-size: 20px;
+				line-height: 48px;
+				margin:0px;
+				margin-bottom: 10px;
+				font-family: AvenirNext-Bold;
+			  font-weight: bold;
+			  font-style: normal;
+			  font-stretch: normal;
+			  letter-spacing: 0px;
+			  text-align: center;
 			}
 		}
 
+		#btn-tutorial {
+			@include gradient-vertical($orange-light, $orange-dark, 90%, 10%);	
+		}
+		#btn-tutorial-skip {
+			cursor: pointer;
+			background: none;
+			box-shadow: none;
+			h2 {
+				font-size: 16px;
+				font-family: $avenir-reg;
+				strong {
+					font-family: $avenir-heavy;
+				}
+			}
+		}
 	}
 
 	// Logo
