--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -138,7 +138,7 @@
 				</div>
 
 				{{!-- Congrats modal --}}
-				<div class="modal inner-modal winner agenda_item yes" data-duration="{{config.decideDuration}}" data-next="{{nextAgendaEvent ../../playerCount @../index @last}}">
+				<div class="modal inner-modal winner agenda_item yes" data-duration="{{../../config.decideDuration}}" data-next="{{nextAgendaEvent ../../playerCount @../index @last}}">
 					<div class="inner">
 						<h1>Congratulations, <strong>{{../username}}</strong>!</h1>
 						<h2>Your agenda item <span class="item">{{this}}</span> is included in the winning proposal. You win {{agendaReward ../../config.rewardAmounts @index}} coins</h2>
@@ -154,7 +154,7 @@
 				</div>
 
 				{{!-- "Sorry" modal --}}
-				<div class="modal inner-modal winner agenda_item no" data-duration="{{config.decideDuration}}" data-next="{{nextAgendaEvent ../../playerCount @../index @last}}">
+				<div class="modal inner-modal winner agenda_item no" data-duration="{{../../config.decideDuration}}" data-next="{{nextAgendaEvent ../../playerCount @../index @last}}">
 					<div class="inner">
 						<h1>Sorry, <strong>{{../username}}..</strong>.</h1>
 						<h2>Your agenda item <span class="item">{{this}}</span> was not included in the winning proposal</h2>
