--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -127,6 +127,8 @@ var setupScreen = function() {
 
     phaseBarProgress();
 
+    runMods();
+
 }
 
 var playerDisconnected = function(timeoutTime, names) {
