--- a/templates/partials/shared/scoreboard.hbs
+++ b/templates/partials/shared/scoreboard.hbs
@@ -2,6 +2,7 @@
 
 	{{!-- INITIAL --}}
 	<div class="screen initial" data-animation="scoreboard">
+		<span id="modifier" class="hidden-el" data-hide_bottom_bar="true"></span>
 
 		{{> component/instructions 
 				all_players=true
